src/styles/styles.css
/* Fonts */
@font-face {
    font-family: 'Orange';
    src: url(/src/fonts/orange_juice.ttf);
    font-weight: normal;
}

/* App styles */
h1,
h2 {
    font-family: 'Orange', sans-serif;
    font-weight: 400;
    margin: 0 0 12px;
    font-size:40px;
}
button {
    transition: 0.3s;
    cursor: pointer;
    padding: 10px 5px;
    outline: none;
    border: none;
    background-color: rgb(64, 126, 189);
    color:#fff;
    font-weight:bold;
}
button:hover {
    background-color: rgb(102, 163, 224);
    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
}
button[disabled] {
    background-color:#444;
}
input {
    padding: 8px 0px;
    font-size: 16px;
    width: 100%;
    border-radius: 0;
    border: 1px solid rgba(180,180,180,0.3);
    margin:0 0 10px;
    border-radius: 4px;
}
input:focus {
    border:1px solid #ff0;
    outline:none;
    background-color: #fff;
    color:#009;
    box-shadow: 0 0 25px rgba(0,0,0,0.9);
}
select {
    padding: 6px 10px;
    cursor: pointer;
    border-radius: 4px;
    border: none;
    outline: none;
    box-shadow: 0 0 10px rgba(0,0,0,0.2);
    background-color:#fff;
}
select:focus {
    outline: none;
    border: 1px solid transparent;
    box-shadow: 0 0 10px rgba(0,0,0,0.5);
}
body {
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;
    font-family: Tahoma, sans-serif;
    background-color:#444;
}
ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

site-main-page {
    display: block;
    width: 100%;
}

/* * * MENU * * */
site-menu {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color:#eee;
    box-shadow: 0px 3px 8px rgba(0,0,0,0.2);
}
site-menu ul {
    padding: 20px 0px;
    display: flex;
    flex-direction: row;
}
.menu-tab {
    font-family: 'Orange', sans-serif;
    transition: 0.3s;
    padding: 22px 10px;
    text-decoration: none;
    color:#000;
    border-bottom: 4px solid transparent;
    cursor: pointer;
    color: #999;
    filter: grayscale(100);
}
.menu-tab:hover {
    border-bottom: 4px solid #999;
    color: rgb(64, 126, 189);
    background-color:#fff;
    filter: grayscale(0);
}
.menu-tab.selected {
    color:#000;
    border-bottom: 4px solid rgb(64, 126, 189);
    background-color:#fff;
    filter: grayscale(0);
}
site-datacontroll,
.progress_table,
.progress_table td button {
    width: 100%;
}
.progress_table tr:nth-child(1) {
    background-color: #eee;
}
.progress_table {
    border-collapse: collapse;
    border: 1px solid #eee;
    width: 100%;
}
.progress_table td {
    padding:4px;
    border: 1px solid #eee;
    vertical-align: top;
}
@media (max-width:767px) {
    site-menu ul {
        padding: 12px 0px;
    }
    .menu-tab {
        padding: 17.5px 6px;
    }
    .menu-tab .text {
        display:none;
    }
    .menu-tab .icon {
        font-size: 10px;
    }
    .menu-tab.selected .text {
        display:inline-block;
        font-size:10px;
    }
}

/* * * CONTENT * * */
.page,
page {
    max-width:600px;
    display: flex;
    margin: 20px auto;
    background-color: #fff;
    padding: 30px;
    border-radius: 18px;
}

site-footer {
    background-color:#eee;
    display: flex;
    align-items: center;
    justify-content: start;
    padding: 20px;
    font-size: 12px;
    color:#999;
}
.title {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}



.abstract_input_field {
    position:relative;
    margin-bottom: 10px;
}
.abstract_input_field input {
    background-color: transparent;
    position: relative;
    z-index: 1;
}




.top_additionals_block {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    margin-right: 10px;
    margin-left: -40px;
    transition: 0.3s;
    padding: 5px;
    font-size:10px;
    color:#666;
    cursor: pointer;
}
.top_additionals_block:hover {
    color:#000;
    border-radius: 8px;
    background-color:#fff;
    transform: scale(1.4) translate(-20px, 10px);
    box-shadow: 0 0 12px rgba(0,0,0,0.3);
}
.top_additionals {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: end;
}
.t-a_row {
    display: flex;
    flex-direction:row;
    gap:5px;
    align-items:center;
    font-size:8px; 
}
.t-a_row:first-child {
    font-weight: bold;
    text-transform: uppercase;
    font-size:10px; 
}
.row-icon {
    font-size: 30px;
}
.level-indicator {
    position: relative;
    width: 100%;
    height:3px;
    margin: 2px 0px 4px;
    background-color:#444;
    border-radius: 3px;
}
.level-indicator > div {
    position: absolute;
    top:0px; left:0px;
    height:100%;
    background-color: rgb(48, 213, 89);
}



/*  Assessment block  */
site-assessment {
    display: block;
    width: 100%;
}
.assessment-block {
    display: flex;
    flex-direction: column;
    width: 100%;
}
.assessment-block input {
    width: 100%;
    margin: 8px 0px;
}

.evaluation_block {
    display: flex; 
    flex-direction:row; 
    justify-content: space-between;
    align-items: center;
}
.check_words_row {
    display: flex; 
    flex-direction:row; 
    gap: 8px;
    padding:5px;
    margin: 5px 0px 0px;
    background-color:#eee;
    border-radius: 10px;
    width: fit-content;
}
.text-outline {
    text-shadow: 0px 1px 1px rgba(0,0,0,0.5), 1px 1px 1px rgba(0,0,0,0.5), 1px 0px 1px rgba(0,0,0,0.5), -1px 0px 1px rgba(0,0,0,0.5), -1px -1px 1px rgba(0,0,0,0.5), 0px -1px 1px rgba(0,0,0,0.5);
}
.check_word {
    padding: 10px 0;
    font-weight:bold;
    font-family: Tahoma, sans-serif;
    font-size: 20px;
}
.score_0 {
    color:rgb(254, 38, 38);
}
.score_1 {
    color:rgb(255, 153, 0);
}
.score_2 {
    color:rgb(119, 255, 0);
}
.evaluation {
    font-size: 20px;
    color:#fff;
    font-weight: bold;
    padding: 20px;
    background-color:rgba(0,0,0,0.7);
    position:fixed;
    top: 20px;
    left: 50%;
    transform: translateX(-50%) scale(130%);
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0,0,0,0.5);
    backdrop-filter: blur(4px);
}
.evaluation.eval_score_0 {
    background-color:rgba(100,0,0,0.7);
    color:#f00;
}
.evaluation.eval_score_1 {
    background-color:rgba(170,50,0,0.7);
    color:#f50;
}
.evaluation.eval_score_2 {
    background-color:rgba(170, 167, 0, 0.7);
    color:rgb(255, 231, 12);
}
.evaluation.eval_score_3 {
    background-color:rgba(112, 126, 19, 0.7);
    color:rgb(195, 228, 45);
}
.evaluation.eval_score_4 {
    background-color:rgba(0, 104, 17, 0.7);
    color:rgb(0, 255, 42);
}
.evaluation .digit {
    margin-right:8px; 
    font-size:20px;
}


.filters-settings {
    display: flex; 
    flex-direction:row;
    justify-content:start;
    margin:0 0 10px;
    padding: 8px;
    border-radius: 4px;
    background-color:#eee;
    gap:5px;
    align-items:center;
}
.active-filters-bar {
    display:flex;
    justify-content:end;
    gap:8px;
    margin:-5px 0px 5px;
}

.filter-checkbox {
    display:flex;
    flex-direction:row;
    align-items:center;
    gap:5px;
    cursor: pointer;
}
.filter-checkbox span {
    white-space: nowrap;
    font-size:12px;
    margin-left:20px;
}
.filter-checkbox input {
    max-width:16px;
    height:16px;
    margin:0;
}


/* COMMON STYLES TEMPLATES  */
.row-between {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.w-full {
    width:100%;
}

